--- a/index.html
+++ b/index.html
@@ -75,9 +75,10 @@
         <img src="./resources/images/cookie.png"/>
         <div class="news-bites">
           <h3>NEWS BITES</h3>
-          <span class="bite">Cat Emoji Goes Viral Buy Youtube</span>
-          <span class="bite">Views Home Business Advertising</span>
-          <span class="bite">Ideas Advertising Internet Online</span>
+          <span class="bite">Cat Emoji Goes Viral</span>
+          <span class="bite">Buy Youtube Views</span>
+          <span class="bite">Home Business Advertising Ideas</span>
+          <span class="bite">Advertising Internet Online</span>
           <span class="bite">Illustration in Marketing Materials</span>
           <span class="bite">Finally a Top Secret Way You Can</span>
         </div>
