--- a/index.html
+++ b/index.html
@@ -84,6 +84,17 @@
     </div>
     <!-- Footer -->
     <footer>
+      <div class="info">
+        <span class="title">MY Times</span>
+        <nav>
+          <span><a href="#world">World</a></span>
+          <span><a href="#us">U.S.</a></span>
+          <span><a href="#tech">Tech</a></span>
+          <span><a href="#science">Science</a></span>
+        </nav>
+      </div>
+      <div class="copyright">&copy;, My Times (A Division of Codeacademy bite)
+      </div>
     </footer>
 
   </body>
