--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="utf-8">
     <title>MY Times</title>
-    <link href="./resources/css/style.css" rel="stylesheet" type="text/css" />
+    <!-- <link href="./resources/css/style.css" rel="stylesheet" type="text/css" /> -->
   </head>
   <body>
     <!-- Header -->
