--- a/index.html
+++ b/index.html
@@ -7,8 +7,8 @@
   </head>
   <body>
     <!-- Header -->
-    <header>
-      <div class="logo">
+    <header class="flex-row">
+      <div class="logo flex-row">
         <img src="./resources/images/logo.jpg" />
         <span>My Times</span>
       </div>
@@ -20,34 +20,34 @@
       </nav>
     </header>
     <!-- Main Content -->
-    <div class="main">
+    <div class="main flex-row">
       <!-- Column One -->
-      <div class="column large">
-        <div class="lead">
-          <div class="image-content" id="lead">
+      <div class="column large flex-column">
+        <section>
+          <div class="image-content flex-column" id="lead">
             <span>Mother of Three Buys Tuna Steak at Phish Concert. Leaves, "Feeling Funny."</span>
           </div>
-          <p class="article">MONUMENT VALLEY, AZ - Lorem ipsum dolor sit amet, consectetur adipiscing elit. Pellentesque nec nisl at augue dapibus dignissim. Nunc condimentum rutrum metus, ac eleifend lacus viverra nec. Proin ultrices egestas diam sed mollis. Nulla sapien massa, dictum vitae est et, pellentesque rutrum risus. Nunc volutpat, metus ac rutrum tempus, orci nisi porttitor dolor, sit amet luctus metus est ut mauris. Quisque vulputate nisl vitae massa rhoncus, at sagittis elit accumsan. Etiam tempus, lorem quis blandit imperdiet, enim dui lobortis tortor, sit amet lobortis arcu ex id odio. Nam fermentum nulla et eros bibendum, sed ullamcorper massa scelerisque. Vestibulum aliquet placerat leo a hendrerit. Nulla non sagittis neque. Nullam sit amet fringilla massa.
+          <p>MONUMENT VALLEY, AZ - Lorem ipsum dolor sit amet, consectetur adipiscing elit. Pellentesque nec nisl at augue dapibus dignissim. Nunc condimentum rutrum metus, ac eleifend lacus viverra nec. Proin ultrices egestas diam sed mollis. Nulla sapien massa, dictum vitae est et, pellentesque rutrum risus. Nunc volutpat, metus ac rutrum tempus, orci nisi porttitor dolor, sit amet luctus metus est ut mauris. Quisque vulputate nisl vitae massa rhoncus, at sagittis elit accumsan. Etiam tempus, lorem quis blandit imperdiet, enim dui lobortis tortor, sit amet lobortis arcu ex id odio. Nam fermentum nulla et eros bibendum, sed ullamcorper massa scelerisque. Vestibulum aliquet placerat leo a hendrerit. Nulla non sagittis neque. Nullam sit amet fringilla massa.
           </p>
-        </div>
-        <div class="stories">
+        </section>
+        <div class="stories flex-row">
           <div class="story">
             <div class="text-content">
               <h2>Orca Spends Vacation at Land World Puget</h2>
-              <p class="article">PUGET, SO - Sed felis elit, faucibus et ipsum vel, vehicula ultrices purus. Sed congue odio vitae malesuada rhoncus. Integer vitae nisi pulvinar ante accumsan...
+              <p>PUGET, SO - Sed felis elit, faucibus et ipsum vel, vehicula ultrices purus. Sed congue odio vitae malesuada rhoncus. Integer vitae nisi pulvinar ante accumsan...
               </p>
             </div>
-            <div class="image-content" id="twilight">
+            <div class="image-content flex-column" id="twilight">
               <span>Earth Spins Backwards for 2017</span>
             </div>
           </div>
           <div class="story">
             <div class="text-content">
               <h2>Burger for Breakfast: How Early is too Early?</h2>
-              <p class="article">Mew York, MY—Interdum et malesuada fames ac ante ipsum primis in faucibus. Pellentesque id quam facilisis, ultrices ante ut, rutrum enim. Praesent eu nisl erat.
+              <p>Mew York, MY—Interdum et malesuada fames ac ante ipsum primis in faucibus. Pellentesque id quam facilisis, ultrices ante ut, rutrum enim. Praesent eu nisl erat.
               </p>
             </div>
-            <div class="image-content" id="hipster">
+            <div class="image-content flex-column" id="hipster">
               <span>Research Shows Cameras Erase Memory</span>
             </div>
           </div>
@@ -57,21 +57,21 @@
       <div class="column medium">
         <div class="story">
           <h2>FBI Finds Action Star Guilty of False Advertising</h2>
-          <p class="article">WASHINGTON DC- Donec luctus sem augue, rutrum posuere orci aliquam sed. Nam vitae aliquam lectus. Sed tempor tortor est, nec sagittis eros tincidunt sed. Morbi venenatis condimentum sem, vitae sollicitudin turpis pulvinar eget. Morbi pellentesque consectetur mi id auctor. Phasellus tincidunt orci mauris, placerat pharetra urna fringilla vitae. Morbi eget rutrum urna. Cras condimentum augue ut ante sollicitudin interdum. Pellentesque cursus dolor at tincidunt cursus. Vestibulum blandit aliquam felis...
+          <p>WASHINGTON DC- Donec luctus sem augue, rutrum posuere orci aliquam sed. Nam vitae aliquam lectus. Sed tempor tortor est, nec sagittis eros tincidunt sed. Morbi venenatis condimentum sem, vitae sollicitudin turpis pulvinar eget. Morbi pellentesque consectetur mi id auctor. Phasellus tincidunt orci mauris, placerat pharetra urna fringilla vitae. Morbi eget rutrum urna. Cras condimentum augue ut ante sollicitudin interdum. Pellentesque cursus dolor at tincidunt cursus. Vestibulum blandit aliquam felis...
           </p>
         </div>
         <div class="story">
-          <div class="image-content" id="cat">
+          <div class="image-content flex-column" id="cat">
             <span>Cats in Control-Is It a Thing?</span>
           </div>
-          <p class="article">BROOKLYN, NY- In molestie nulla sodales sit amet. Proin vulputate, ipsum porta aliquam commodo, nunc nibh tincidunt lorem, vel consectetur neque mi vel neque. Mauris ultricies, nulla scelerisque sollicitudin lobortis, dui est sodales sapien, a vestibulum velit diam eget felis. Vivamus dignissim lacinia dolor, quis commodo tellus pellentesque in.
+          <p>BROOKLYN, NY- In molestie nulla sodales sit amet. Proin vulputate, ipsum porta aliquam commodo, nunc nibh tincidunt lorem, vel consectetur neque mi vel neque. Mauris ultricies, nulla scelerisque sollicitudin lobortis, dui est sodales sapien, a vestibulum velit diam eget felis. Vivamus dignissim lacinia dolor, quis commodo tellus pellentesque in.
           </p>
         </div>
       </div>
       <!-- Column Three -->
       <div class="column small">
         <img src="./resources/images/cookie.png"/>
-        <div class="news-bites">
+        <div class="news-bites flex-column">
           <h3>NEWS BITES</h3>
           <span class="bite">Cat Emoji Goes Viral</span>
           <span class="bite">Buy Youtube Views</span>
@@ -83,7 +83,7 @@
       </div>
     </div>
     <!-- Footer -->
-    <footer>
+    <footer class="flex-column">
       <div class="info">
         <span class="title">MY Times</span>
         <nav>
